# burst

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
scripts/: request_lifetime.sh
src/: app.rs  burst.d  client.rs  main.rs
tests/: test_cli.rs
