[package]
name = "burst"
version = "0.1.0"
authors = ["Karen Cárcamo Fernández Veraud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdt = { version = "0.1", features = ["asm"]}
clap = "2.33"
reqwest = "0.11"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "0.8.2", features = ["v4"] }