[package]
name = "burst"
version = "0.1.0"
authors = ["Karen Cárcamo Fernández Veraud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdt = { version = "0.3", default-features = false }
clap = "2.33"
reqwest = "0.11"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
assert_cmd = "0.10"
predicates = "1"
mockito = "0.30"

[features]
default = ["asm"]
asm = ["usdt/asm"]